# CRISPR-DA

./: LICENCE  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml  publish-to-testpypi.yml
crispr-da/: cache.py  data.py  visualise.py
crispr-da/ISSL/: CMakeLists.txt
crispr-da/ISSL/penalties/: penalties.cpp
crispr-da/resources/: trainingResults.pkl
crispr-da/utils/: cli.py
crisprda/: data.py  off_target.py  on_target.py
crisprda/utils/: cli.py
examples/: design_for_covid_spike_protein.py  viruses.csv
src/crispr_da/: analysis.py  collection.py  config.py  data.py  on_target.py  utils.py  visualise.py
src/crispr_da/ISSL/: CMakeLists.txt
src/crispr_da/resources/: model-1_0_2.txt
src/crispr_da/scripts/: cli.py
src/crispr_da/utils/: cli.py
viralcut/: __init__.py  analysis.py  cache.py  collection.py  config.py  data.py  dataset.py  design.py  guide.py  off_target.py  on-target.py  on_target.py  score.py  utils.py  viewer.py  visualise.py
viralcut/ISSL/: CMakeLists.txt
viralcut/resources/: human_viruses.csv
viralcut/utils/: cli.py
viralcut/viewer/: Euk.tree.annotations2.csv  Euk2.txt  index.html  server.py  test.newick.txt  test.scores.csv  test.species.csv
viralcut/viewer/css/: main.css
viralcut/viewer/js/: tree.js
