[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "crispr_da"
version = "0.0.6"
authors = [
  { name="Carl Schmitz"},
  { name="Jake Bradford"},
  { name="Dimitri Perrin", email="dimitri.perrin@qut.edu.au"}
]
description = "For designing CRISPR-Cas9 sgRNA when many genomes are to be considered."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "torch == 2.3.1",
  "biopython >= 1.86",
  "pandas >= 1.4.1",
  "ete3 >= 3.1.3",
  "requests >= 2.32.5",
  "dill",
  "matplotlib",
  "tqdm",
]

[project.urls]
Homepage = "https://biomedicaldatascience.com/index.html"
Repository = "https://github.com/bmds-lab/crispr-da.git"
Issues = "https://github.com/bmds-lab/crispr-da/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["crispr_da*"]  
exclude = ["resources*"]
namespaces = false

[project.scripts]
crispr_da = "crispr_da.utils.cli:main"